# MysteryMixClub

./: .env.example  .env.production.example  .gitignore  .lintstagedrc.mjs  CLAUDE.md  DEPLOYMENT-MINIMAL.md  DEPLOYMENT.md  Makefile  README.md  SONGLINK_API.md  deploy.sh  design-system.md  docker-compose.prod.yml  docker-compose.yml  install-minimal.sh  mysql-low-memory.cnf  package-lock.json  package.json
backend/: .env.example  Dockerfile  MUSIC_PROVIDERS.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  001_initial_users_table.py  002_leagues_tables.py  003_rounds_and_submissions_new_flow.py  004_add_votes_table.py  005_multi_song_support.py  006_tidal_oauth.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py  wire.py
backend/app/auth/: deps.py  jwt.py  tokens.py
backend/app/core/: database.py  security.py
backend/app/db/: session.py
backend/app/jobs/: advance_mixes.py  advance_rounds.py  purge_accounts.py
backend/app/middleware/: security_headers.py
backend/app/models/: __init__.py  apple_mix_playlist.py  apple_round_playlist.py  club.py  club_member.py  invite.py  league.py  league_member.py  magic_link_token.py  mix.py  note.py  round.py  session.py  song.py  spotify_connection.py  spotify_mix_playlist.py  spotify_round_playlist.py  submission.py  user.py  vote.py  (+1 more)
backend/migrations/: env.py
backend/scripts/: seed_demo.py
backend/tests/: conftest.py  test_admin_users.py  test_admin_waitlist.py  test_advance_mixes.py  test_advance_rounds.py  test_apple_music.py  test_apple_music_token.py  test_auth.py  test_auth_logout.py  test_auth_refresh.py  test_auth_request.py  test_auth_verify.py  test_authorization_isolation.py  test_auto_advance.py  test_club_member_role.py  test_clubs_create.py  test_clubs_delete.py  test_clubs_detail.py  test_clubs_leaderboard.py  test_clubs_list.py  test_clubs_members.py  test_clubs_membership.py  test_clubs_patch.py  test_clubs_remove_member.py  test_co_organizer_parity.py  test_config.py  test_deadline_schema.py  test_deezer_search_service.py  test_deploy_spec.py  test_email_redirect.py  test_health.py  test_inbound_email.py  test_input_sanitization.py  test_invites_admin.py  test_invites_create.py  test_invites_preview_accept.py  test_league_member_role.py  test_leagues_create.py  test_leagues_delete.py  test_leagues_detail.py  (+41 more)
(+323 files in other folders)
