[project]
name = "mysterymixclub-backend"
version = "0.0.0"
description = "MysteryMixClub FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "email-validator>=2.2.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.0",
  "resend>=2.0.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0,<0.16.0", # MYS-243: 0.16.0 introduced default-rule changes that flag 500+ pre-existing violations; pin until that's deliberately addressed
  "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"

# python-jose ships no type stubs. app/auth/jwt.py deliberately confines the
# untyped boundary to that one module (re-exporting JWTError so callers don't
# import jose directly); ignore the missing import rather than vendor stubs.
[[tool.mypy.overrides]]
module = ["jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
